# azure-cosmos-db-demo

./: .gitignore  1_import.py  2_load_and_index.py  3_query.py  README.md  pyproject.toml
flask_app/: app.py
